--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Footers - A Sub Shop Scramble</title>
+  <title>SammyBot - Robot Sandwich Maker</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Caveat&family=Permanent+Marker&family=Nothing+You+Could+Do&family=Grape+Nuts&display=swap" rel="stylesheet">
